--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <!-- Navigation -->
-    
+    <nav>
+        <ul>
+            <li><a href="">About us</a></li>
+            <li><a href=""></a>Sign up</li>
+            <li><a href=""></a>Contact</li>
+        </ul>
+    </nav>
     <!-- Hero image -->
 
     <!-- header -->
