add header and hero image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <ul>
-            <li><a href="">About us</a></li>
-            <li><a href=""></a>Sign up</li>
-            <li><a href=""></a>Contact</li>
+        <ul id="navbar-link">
+            <li><a href="header">Learn how to fish!</a></li>
+            <li><a href="About-us">About us</a></li>
+            <li><a href="Sign-up"></a>Sign up</li>
+            <li><a href="Contact"></a>Contact</li>
         </ul>
     </nav>
     <!-- Hero image -->
-
     <!-- header -->
+<header>
 
+</header>
     <!-- About us-->
 
     <!-- sign up-->
