adding folder assets and css stylesheet

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Navigation -->
     <nav>
         <ul id="navbar-link">
-            <li><a href="header">Learn how to fish!</a></li>
+            <li><a href="#header">Learn how to fish!</a></li>
             <li><a href="About-us">About us</a></li>
             <li><a href="Sign-up"></a>Sign up</li>
             <li><a href="Contact"></a>Contact</li>
@@ -18,7 +18,8 @@
     <!-- Hero image -->
     <!-- header -->
 <header>
-
+    <h1 id="header" class="picture">Do you want to learn about fishing?</h1>
+    
 </header>
     <!-- About us-->
 
