simple styling for image

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- Hero image -->
     <!-- header -->
 <header>
-    <h1 id="header" class="picture">Do you want to learn about fishing?</h1>
+    <img src="assets/images/istockphoto-684090194-612x612.jpg" class="picture" alt="Father and son fishing">
+    <h1 id="header">Do you want to learn about fishing?</h1>
     
+
 </header>
     <!-- About us-->
 
