add main and section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Navigation -->
     <nav>
         <ul id="navbar-link">
-            <li><a href="#header">Learn how to fish!</a></li>
+            <li><a href="header">Learn how to fish!</a></li>
             <li><a href="About-us">About us</a></li>
             <li><a href="Sign-up"></a>Sign up</li>
             <li><a href="Contact"></a>Contact</li>
@@ -17,14 +17,20 @@
     </nav>
     <!-- Hero image -->
     <!-- header -->
-<header>
+<header id="header">
+    <div>
     <img src="assets/images/istockphoto-684090194-612x612.jpg" class="picture" alt="Father and son fishing">
-    <h1 id="header">Do you want to learn about fishing?</h1>
-    
-
+    </div>
+    <div>      
+    <h1 >Do you want to learn about fishing?</h1>
+    </div>
 </header>
     <!-- About us-->
+<main>
+    <section id="About-us">
 
+    </section>
+</main>
     <!-- sign up-->
     
     <!-- contact -->
