add content to about us section

--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
     <img src="assets/images/istockphoto-684090194-612x612.jpg" class="picture" alt="Father and son fishing">
     </div>
     <div>      
-    <h1 >Do you want to learn about fishing?</h1>
+    <h1 >Do you want to learn how to catch a fish?</h1>
+    <p>Join our program and you will. </p>
     </div>
 </header>
     <!-- About us-->
 <main>
     <section id="About-us">
-
+            <h2>About Us</h2>
+            <p>text</p>
+    </section>
+    <section>
+            <h3>we offer:</h3>
+            <ul>
+                <li></li>
+            </ul>
     </section>
 </main>
     <!-- sign up-->
