add second section with h3 and list

--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
             <p>text</p>
     </section>
     <section>
-            <h3>we offer:</h3>
+            <h3>You will learn</h3>
             <ul>
-                <li></li>
+                <li>best techniques for different species</li>
+                <li>how to navigate on sea maps</li>
+                <li>what lures to use</li>
+                <li>where to look</li>
+                <li>How to take care of wildlife</li>
+
             </ul>
     </section>
 </main>
