add form for signup, set all to required

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
                 <li>what lures to use</li>
                 <li>where to look</li>
                 <li>How to take care of wildlife</li>
-
             </ul>
     </section>
+    <form>
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lname" required>
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" required>
+    </form>
 </main>
     <!-- sign up-->
-    
     <!-- contact -->
 
 </body>
