--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <input type="text" id="fname" name="fname" required>
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" required>
-        <label for="email">Email Address</label>
+        <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
+        <input type="submit" value="submit">
     </form>
 </main>
     <!-- sign up-->
