--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h2>About Us</h2>
             <p>text</p>
     </section>
+    <!-- course content-->
     <section>
             <h3>You will learn</h3>
             <ul>
@@ -42,18 +43,29 @@
                 <li>How to take care of wildlife</li>
             </ul>
     </section>
+    <!-- sign up-->
     <form>
+        Sign up for 5 lessons!
+        <br>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname" required>
+        <br>
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" required>
-        <label for="email">Email</label>
+        <br>
+        <label for="email">Contact Email</label>
         <input type="email" id="email" name="email" required>
+        <br>
         <input type="submit" value="submit">
     </form>
 </main>
-    <!-- sign up-->
+
+<footer>
     <!-- contact -->
+    <h2>Contact Us!</h2>
+    <p></p>
+</footer>
+   
 
 </body>
 </html>
