add second picture as background image for course content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </section>
     <!-- course content-->
     <section>
-            <h3>You will learn</h3>
+        <img src="assets/images/pexels-photo-17213802.webp" alt="Pike getting free">
+        <div class="cover-text">
+                <h3>You will learn</h3>
             <ul>
                 <li>best techniques for different species</li>
                 <li>how to navigate on sea maps</li>
@@ -42,6 +44,7 @@
                 <li>where to look</li>
                 <li>How to take care of wildlife</li>
             </ul>
+        </div>
     </section>
     <!-- sign up-->
     <form>
@@ -63,7 +66,10 @@
 <footer>
     <!-- contact -->
     <h2>Contact Us!</h2>
-    <p></p>
+    <p>Swedishfishing@gmail.com</p>
+    <p>073 456 131 91</p>
+
+
 </footer>
    
 
