adding content to header and main sections.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
     <!-- Navigation -->
     <nav>
         <ul id="navbar-link">
-            <li><a href="header">Learn how to fish!</a></li>
-            <li><a href="About-us">About us</a></li>
-            <li><a href="Sign-up"></a>Sign up</li>
-            <li><a href="Contact"></a>Contact</li>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#About-us">About us</a></li>
+            <li><a href="#Sign-up"></a>Sign up</li>
+            <li><a href="#Contact"></a>Contact</li>
         </ul>
     </nav>
     <!-- Hero image -->
     <!-- header -->
 <header id="header">
-    <div>
-    <img src="assets/images/istockphoto-684090194-612x612.jpg" class="picture" alt="Father and son fishing">
-    </div>
-    <div>      
-    <h1 >Do you want to learn how to catch a fish?</h1>
-    <p>Join our program and you will. </p>
+    <div id="container">
+        <div>      
+        <h1 >Do you want to learn more about fishing?</h1>
+        <p>Join us for a course this summer to learn everything you need to know about fishing.
+            With over 20 years of experience we offer exciting lessons in a beautiful environment in the enchanting Swedish nature.
+        </p>
+        </div>  
     </div>
 </header>
     <!-- About us-->
 <main>
-    <section id="About-us">
-            <h2>About Us</h2>
-            <p>text</p>
+    <section >
+            <h2 id="About-us">About Us</h2>
+            <p>We're a small little family businness located in countryside of the beautiful northern Sweden. 
+                We offer regular courses throughout the year for everyone interesting in fishing. 
+                In this new course we offer you will learn everything that you need to know when it comes to fishing, regardless of you have previous experience or not.
+             </p>
     </section>
     <!-- course content-->
     <section>
-        <img src="assets/images/pexels-photo-17213802.webp" alt="Pike getting free">
         <div class="cover-text">
                 <h3>You will learn</h3>
             <ul>
@@ -49,16 +52,16 @@
     <!-- sign up-->
     <form>
         Sign up for 5 lessons!
-        <br>
+    <br>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname" required>
-        <br>
+    <br>
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lname" required>
-        <br>
+    <br>
         <label for="email">Contact Email</label>
         <input type="email" id="email" name="email" required>
-        <br>
+    <br>
         <input type="submit" value="submit">
     </form>
 </main>
