adding class and id to header, main & footer

--- a/index.html
+++ b/index.html
@@ -4,53 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn how to fish</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <ul id="navbar-link">
-            <li><a href="#header">Home</a></li>
-            <li><a href="#About-us">About us</a></li>
-            <li><a href="#Sign-up"></a>Sign up</li>
-            <li><a href="#Contact"></a>Contact</li>
+    <nav id="nav">
+        <ul>
+            <li id="logo"><a href="#header">Fishing</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#signup">Sign up</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <!-- Hero image -->
     <!-- header -->
-<header id="header">
-    <div id="container">
-        <div>      
+<header id="header" class="sections picture">
+     <div>      
         <h1 >Do you want to learn more about fishing?</h1>
         <p>Join us for a course this summer to learn everything you need to know about fishing.
             With over 20 years of experience we offer exciting lessons in a beautiful environment in the enchanting Swedish nature.
         </p>
-        </div>  
-    </div>
+     </div>  
 </header>
     <!-- About us-->
 <main>
-    <section >
-            <h2 id="About-us">About Us</h2>
-            <p>We're a small little family businness located in countryside of the beautiful northern Sweden. 
+    <section id="about" class="sections">
+            <h2>About Us</h2>
+            <p>We're a small little family businness located on the countryside of the beautiful northern Sweden. 
                 We offer regular courses throughout the year for everyone interesting in fishing. 
-                In this new course we offer you will learn everything that you need to know when it comes to fishing, regardless of you have previous experience or not.
+                In this new course you will learn everything that you need to know when it comes to fishing, regardless of you have previous experience or not.
              </p>
     </section>
     <!-- course content-->
-    <section>
-        <div class="cover-text">
+    <!-- background picture-->
+    <section >
+        <div >
                 <h3>You will learn</h3>
             <ul>
-                <li>best techniques for different species</li>
-                <li>how to navigate on sea maps</li>
-                <li>what lures to use</li>
-                <li>where to look</li>
-                <li>How to take care of wildlife</li>
+                <li>Best techniques for different species.</li>
+                <li>How to navigate on sea maps.</li>
+                <li>What lures to use.</li>
+                <li>Where to look.</li>
+                <li>How to take care of wildlife.</li>
             </ul>
         </div>
     </section>
     <!-- sign up-->
-    <form>
+    <form id="signup">
         Sign up for 5 lessons!
     <br>
         <label for="fname">First Name</label>
@@ -66,12 +66,12 @@
     </form>
 </main>
 
-<footer>
+<footer id="contact" class="sections">
     <!-- contact -->
     <h2>Contact Us!</h2>
     <p>Swedishfishing@gmail.com</p>
     <p>073 456 131 91</p>
-
+    <!-- social networks-->
 
 </footer>
    
