setting margin and padding to 0 for body

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <!-- course content-->
     <!-- background picture-->
-    <section >
+    <section class="sections">
         <div >
                 <h3>You will learn</h3>
             <ul>
