adding css for picture in header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </nav>
     <!-- Hero image -->
     <!-- header -->
-<header id="header" class="sections picture">
-     <div>      
+<header id="header" class="picture">
+     <div class="content-right">      
         <h1 >Do you want to learn more about fishing?</h1>
         <p>Join us for a course this summer to learn everything you need to know about fishing.
             With over 20 years of experience we offer exciting lessons in a beautiful environment in the enchanting Swedish nature.
@@ -66,7 +66,7 @@
     </form>
 </main>
 
-<footer id="contact" class="sections">
+<footer id="contact">
     <!-- contact -->
     <h2>Contact Us!</h2>
     <p>Swedishfishing@gmail.com</p>
