--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     </nav>
     <!-- Hero image -->
     <!-- header -->
-<header id="header" class="picture">
-     <div class="content-right">      
+<header id="header" >
+<div class="picture">
+    <div class="cover-picture">      
         <h1 >Do you want to learn more about fishing?</h1>
         <p>Join us for a course this summer to learn everything you need to know about fishing.
-            With over 20 years of experience we offer exciting lessons in a beautiful environment in the enchanting Swedish nature.
+            With over 20 years of experience 
+            <br>
+            we offer exciting lessons in a beautiful environment in the enchanting Swedish nature.
         </p>
-     </div>  
+     </div> 
+</div> 
 </header>
     <!-- About us-->
 <main>
