styling navbar with flex property. simple styling, color, size & padding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav id="nav">
+    <nav>
         <ul>
             <li id="logo"><a href="#header">Fishing</a></li>
             <li><a href="#about">About us</a></li>
