--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn how to fish</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <ul>
-            <li id="logo"><a href="#header">Fishing</a></li>
+            <li id="logo"><a href="#header"> Learn How To Fish <i class="fa-solid fa-fish-fins"> </i></a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#signup">Sign up</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -77,9 +78,9 @@
     <p>073 456 131 91</p>
     <!-- social networks-->
 
-</footer>
-   
-
+</footer>   
+<!-- Font Awesome kit -->
+<script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
