adding border solid color for nav and header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <ul>
-            <li id="logo"><a href="#header"> Learn How To Fish <i class="fa-solid fa-fish-fins"> </i></a></li>
-            <li><a href="#about">About us</a></li>
-            <li><a href="#signup">Sign up</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <div id="logo">
+            <a href="#header"> Learn How To Fish <i class="fa-solid fa-fish-fins"> </i></a></li>
+          <div>
+            <a href="#about">About us</a>
+            <a href="#signup">Sign up</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </div>
     </nav>
     <!-- Hero image -->
     <!-- header -->
