add background picture for about section. styling color and borders

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav>
         <div id="logo">
             <a href="#header"> Learn How To Fish <i class="fa-solid fa-fish-fins"> </i></a></li>
-          <div>
+        </div>
+        <div>
             <a href="#about">About us</a>
             <a href="#signup">Sign up</a>
             <a href="#contact">Contact</a>
           </div>
-        </div>
     </nav>
     <!-- Hero image -->
     <!-- header -->
@@ -37,16 +37,16 @@
 <main>
     <section id="about" class="sections">
             <h2>About Us</h2>
+            <br>
             <p>We're a small little family businness located on the countryside of the beautiful northern Sweden. 
-                We offer regular courses throughout the year for everyone interesting in fishing. 
+                We offer regular courses throughout the year for everyone interesting in fishing.
                 In this new course you will learn everything that you need to know when it comes to fishing, regardless of you have previous experience or not.
              </p>
-    </section>
+             <br>
     <!-- course content-->
-    <!-- background picture-->
-    <section class="sections">
-        <div >
+        <div class="sections about-cover">
                 <h3>You will learn</h3>
+                <br>
             <ul>
                 <li>Best techniques for different species.</li>
                 <li>How to navigate on sea maps.</li>
