adding media query so that the content fits allscreentypes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div id="logo">
-            <a href="#header"> Learn How To Fish <i class="fa-solid fa-fish-fins"> </i></a></li>
+            <a href="#header"><i class="fa-solid fa-fish-fins"> </i></a></li>
         </div>
         <div>
             <a href="#about">About us</a>
