--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </section>
     <!-- sign up-->
     <form id="signup">
-        Sign up for 5 lessons!
+        <h3>Sign up for 5 lessons!</h3>
+        
     <br>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname" required>
@@ -69,7 +70,8 @@
         <label for="email">Contact Email</label>
         <input type="email" id="email" name="email" required>
     <br>
-        <input type="submit" value="submit">
+    <br>
+        <input class="submit-size" type="submit" value="Send request">
     </form>
 </main>
 
