adding social media links to footer, and font icons

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
     <p>Swedishfishing@gmail.com</p>
     <p>073 456 131 91</p>
     <!-- social networks-->
-
+    <div id="social-networks">
+        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-square-youtube"></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+    </div>
 </footer>   
 <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
