--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- About us-->
 <main>
     <section id="about" class="sections">
-            <h2>About Us</h2>
+            <h2 class="center">About Us</h2>
             <br>
-            <p>We're a small little family businness located on the countryside of the beautiful northern Sweden. 
+            <p class="center">We're a small little family businness located on the countryside of the beautiful northern Sweden. 
                 We offer regular courses throughout the year for everyone interesting in fishing.
                 In this new course you will learn everything that you need to know when it comes to fishing, regardless of you have previous experience or not.
              </p>
