--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
              <br>
     <!-- course content-->
         <div class="sections about-cover">
-                <h3>You will learn</h3>
+                <h3>By joining us you will learn: </h3>
                 <br>
             <ul>
-                <li>Best techniques for different species.</li>
-                <li>How to navigate on sea maps.</li>
+                <li>The Best techniques for different species.</li>
+                <li>How to navigate on water with sea maps.</li>
                 <li>What lures to use.</li>
-                <li>Where to look.</li>
-                <li>How to take care of wildlife.</li>
+                <li>Where to look for fish.</li>
+                <li>How to take care of wildlife & nature.</li>
             </ul>
         </div>
     </section>
