adding font icons to aboutus

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <h3>By joining us you will learn: </h3>
                 <br>
             <ul>
-                <li>The Best techniques for different species.</li>
-                <li>How to navigate on water with sea maps.</li>
-                <li>What lures to use.</li>
-                <li>Where to look for fish.</li>
-                <li>How to take care of wildlife & nature.</li>
+                <li>The Best techniques for different species. <i class="fa-solid fa-star"></i></li>
+                <li>How to navigate on water with sea maps. <i class="fa-regular fa-map"></i></li>
+                <li>What lures to use. <i class="fa-solid fa-worm"></i></li>
+                <li>Where to look for fish. <i class="fa-solid fa-binoculars"></i></li>
+                <li>How to take care of wildlife & nature. <i class="fa-solid fa-water"></i></li>
             </ul>
         </div>
     </section>
