--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn how to fish</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="">
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <div id="logo">
-            <a href="#header"><i class="fa-solid fa-fish-fins"> </i></a></li>
+            <a href="#header" aria-label="Logo of a fish taking us to the header section"><i class="fa-solid fa-fish-fins"> </i></a>
         </div>
         <div>
-            <a href="#about">About us</a>
-            <a href="#signup">Sign up</a>
-            <a href="#contact">Contact</a>
+            <a href="#about" aria-label="Read more about us" >About us</a>
+            <a href="#signup" aria-label="Sign up for 5 lessons">Sign up</a>
+            <a href="#contact" aria-label="Here is our contact information">Contact</a>
           </div>
     </nav>
     <!-- Hero image -->
@@ -81,9 +80,9 @@
     <p>073 456 131 91</p>
     <!-- social networks-->
     <div id="social-networks">
-        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-square-youtube"></i></a>
-        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="https://www.youtube.com/" target="_blank" aria-label="Learn more about us on our youtube page"><i class="fa-brands fa-square-youtube"></i></a>
+        <a href="https://www.facebook.com/" target="_blank" aria-label="Learn more about us on our facebook page"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" aria-label="Learn more about us on our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
     </div>
 </footer>   
 <!-- Font Awesome kit -->
