--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
         </div>
     </section>
     <!-- sign up-->
-    <form id="signup">
+    <form id="signup" action="https://formdump.codeinstitute.net" method="POST" target="_blank">
         <h3>Sign up for 5 lessons!</h3>
-        
     <br>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname" required>
@@ -69,7 +68,7 @@
         <input type="email" id="email" name="email" required>
     <br>
     <br>
-        <input class="submit-size" type="submit" value="Send request">
+        <input type="submit" value="Send request" class="submit-size">
     </form>
 </main>
 
