changing header in navbar to Learn to fish

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav>
         <div id="logo">
-            <a href="#header" aria-label="Logo of a fish taking us to the header section"><i class="fa-solid fa-fish-fins"> </i></a>
+            <a href="#header" aria-label="Site name, learn to fish">Learn To Fish</a>
         </div>
         <div>
             <a href="#about" aria-label="Read more about us" >About us</a>
