--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="logo">
             <a href="#header" aria-label="Site name, learn to fish">Learn To Fish</a>
         </div>
-        <div>
+        <div id="navbar-links">
             <a href="#about" aria-label="Read more about us" >About us</a>
             <a href="#signup" aria-label="Sign up for 5 lessons">Sign up</a>
             <a href="#contact" aria-label="Here is our contact information">Contact</a>
