adding new id in navbar with value left & right

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div id="logo">
+        <div id="left">
             <a href="#header" aria-label="Site name, learn to fish">Learn To Fish</a>
         </div>
-        <div id="navbar-links">
+        <div id="right">
             <a href="#about" aria-label="Read more about us" >About us</a>
             <a href="#signup" aria-label="Sign up for 5 lessons">Sign up</a>
             <a href="#contact" aria-label="Here is our contact information">Contact</a>
